Fix stupid error in overflow-wrap rule.

--- a/src/base.css
+++ b/src/base.css
@@ -780,8 +780,8 @@
 	*/
 
 	table {
-		word-wrap: break-word;
-		overflow-wrap: break-word;
+		word-wrap: normal;
+		overflow-wrap: normal;
 		hyphens: manual;
 	}
 
